--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -511,7 +511,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.7);
+  background: rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -937,4 +937,188 @@ thead, tfoot {
 
 .modal-footer .btn-danger {
   margin-left: auto;
+}
+
+
+.heatmap-container {
+  display: grid;
+  grid-template-rows: auto 1fr;
+  gap: 10px;
+}
+
+.heatmap {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+  grid-auto-rows: 50px;
+  gap: 2px;
+}
+
+.cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border-radius: 4px;
+  transition: transform 0.3s ease; /* Suaviza la animación */
+}
+
+.cell:hover {
+  transform: scale(1.1); /* Agranda el elemento un 10% */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 2px 4px rgba(0, 0, 0, 0.1); /* Agrega sombra al pasar el cursor */
+}
+
+.legend {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.legend-item {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.legend-color {
+  width: 20px;
+  height: 20px;
+  border-radius: 4px;
+}
+
+/* Heatmap Colors */
+.low {
+  background-color: #FFF3CD;
+  color : #E4A824;
+}
+
+.medium {
+  background-color: #FFA500; /* Naranja */
+  color: #FFFFFF; /* Texto blanco para mejor contraste */
+}
+
+.high {
+  background-color: #F8D7DA;
+  color: #721C24;
+}
+
+.regiones path {
+  fill: rgb(255, 217, 50);
+  stroke: #68310a;
+  stroke-width: 1px;
+}
+
+.regiones path:hover {
+  fill: crimson;
+}
+
+
+.icon {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px 0;
+}
+
+.icon div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 45%;
+}
+
+.icon .dog {
+  color: orange;
+}
+
+.icon .cat {
+  color: blue;
+}
+
+.bar-container {
+  position: relative;
+  height: 30px;
+  background: #ddd;
+  border-radius: 15px;
+  overflow: hidden;
+  display: flex;
+}
+
+.bar {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  color: #fff;
+}
+
+.dog-bar {
+  background: orange;
+  border-radius: 15px 0 0 15px;
+}
+
+.cat-bar {
+  background: blue;
+  border-radius: 0 15px 15px 0;
+}
+
+.bar span {
+  padding: 0 10px;
+}
+
+
+.header {
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 10px;
+  margin-bottom: 15px;
+}
+.header h1 {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+.tabs {
+  border-bottom: 2px solid transparent;
+  margin-right: 10px;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+.tabs.active {
+  border-bottom: 2px solid #007bff;
+}
+.icons img {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  margin-left: 5px;
+}
+
+.card-block{
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
+.card-block .rotate {
+  z-index: 8;
+  float: right;
+  height: 100%;
+}
+
+.card-block .rotate i {
+  color: rgba(20, 20, 20, 0.15);
+  position: absolute;
+  left: 0;
+  left: auto;
+  right: -10px;
+  bottom: 0;
+  display: block;
+  -webkit-transform: rotate(-44deg);
+  -moz-transform: rotate(-44deg);
+  -o-transform: rotate(-44deg);
+  -ms-transform: rotate(-44deg);
+  transform: rotate(-44deg);
+}
+
+.card-inverse{
+  color: #fff;
 }
